fix icon alignment in events

--- a/public/styles/site/_component-card.scss
+++ b/public/styles/site/_component-card.scss
@@ -69,7 +69,7 @@
 	}
 }
 
-card__overview-icon {
+.card__overview-icon {
 	width: 1em;
     text-align: center;
 }
